# VitaNote

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  DATABASE.md  DESIGN.md  IMPLEMENTATION.md  LICENSE  PROJECT_COMPLETION.md  PROJECT_FILES_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QWEN.md  README.md  START.md  VitaNote.slnx  database-migrations.sql  docker-compose.yml  package.json  start-all.bat  start-all.sh  stop-all.bat  tsconfig.json
backend/: .env.example  .gitignore  Dockerfile  README.md  api-config.json  appsettings.Production.json  docs.json  docs.md  swagger.json
docs/: README.md  README_ZH.md  docs.toml  package.json
frontend/: .env.json  .gitignore  Dockerfile  README.md  docs.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.build.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx  theme.ts  types.ts
mobile/: README.md  package-lock.json  package.json  tauri.conf.json  tsconfig.json
mobile/src-tauri/: .eslintrc.json  .gitignore  Cargo.toml  README.md  index.html  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/src/: commands.rs  lib.rs  main.rs
mobile/src-tauri/src/commands/: auth.rs  camera.rs  clipboard.rs  filesystem.rs  health_records.rs  llm.rs  storage.rs
mobile/src-tauri/src/renderer/: App.tsx
src/VitaNote.Shared/: Enums.cs
vita-note/: README.md  package-lock.json  package.json  vite.config.ts
vita-note/src-tauri/: Cargo.toml  tauri.conf.json
vita-note/src-tauri/src/: database.rs  lib.rs  main.rs
(+154 files in other folders)
