[package]
name = "vita_note"
version = "1.0.0"
description = "VitaNote - A smart health management application"
authors = ["VitaNote Team"]
license = "MIT"
repository = "https://github.com/your-username/vita-note"
documentation = "https://github.com/your-username/vita-note"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
url = "2.5"

[features]
default = ["tauri/custom-protocol"]
tauri-dev = ["tauri/dev"]
